Implement Diagnosis UUID storage migration
